--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,23 @@
+astroid==1.5.3
+backports.functools-lru-cache==1.4
 certifi==2017.7.27.1
 chardet==3.0.4
+configparser==3.5.0
+coverage==4.4.1
 Django==1.11.5
 djangorestframework==3.6.4
+enum34==1.1.6
 idna==2.6
+isort==4.2.15
+lazy-object-proxy==1.3.1
+mccabe==0.6.1
+pep8==1.7.0
+pylint==1.7.2
+pylint-django==0.7.2
+pylint-plugin-utils==0.2.6
 pytz==2017.2
 requests==2.18.4
+singledispatch==3.4.0.3
+six==1.10.0
 urllib3==1.22
+wrapt==1.10.11
